# ShaderClient

./: .gitignore
ShaderClient/: CMakeLists.txt  CMakeSettings.json  vcpkg.json
ShaderClient/ShaderClient/: CMakeLists.txt  GUI.cpp  GUI.h  ObjectModel.h  ShaderClient.cpp  ShaderProgram.cpp  ShaderProgram.h
